fix(swaync): make slider trough visible again

--- a/.config/swaync/style.scss
+++ b/.config/swaync/style.scss
@@ -149,14 +149,15 @@ $font-family: 'Cartograph CF';
     margin: 8px;
     padding: 8px;
 
-    contents {
+    trough {
         background: rgba($pink, 0.3);
         border-radius: 12px;
+        border: 1px solid $pink;
     }
 
     slider {
         background: $pink;
         border-radius: 100%;
-        padding: 4px;
+        padding: 6px;
     }
 }
